@@ -33,8 +33,8 @@ public class UserService implements UserDetailsService {
 
         User user = new User();
 
-        user.setEmail(result.getFirst().getUsername());
-        user.setPassword(result.getFirst().getPassword());
+        user.setEmail(result.get(0).getUsername());
+        user.setPassword(result.get(0).getPassword());
 
         for (UserDetailsProjection projection : result) {
             user.addRole(new Role(projection.getRoleId(), projection.getAuthority()));
